--- a/package.json
+++ b/package.json
@@ -21,5 +21,24 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^6.0.3",
+    "babel": "^5.8.23",
+    "babel-core": "^5.8.25",
+    "babel-loader": "^5.3.2",
+    "css-loader": "^0.19.0",
+    "file-loader": "^0.8.4",
+    "hjs-webpack": "^2.13.2",
+    "json-loader": "^0.5.3",
+    "postcss-loader": "^0.6.0",
+    "react": "^0.13.3",
+    "react-hot-loader": "^1.3.0",
+    "style-loader": "^0.12.4",
+    "stylus-loader": "^1.3.1",
+    "url-loader": "^0.5.6",
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.12.0",
+    "yeticss": "^7.0.5"
   }
 }
