--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "url": "git+https://github.com/stevenmathews/projecter.git"
   },
   "scripts": {
+    "start": "webpack-dev-server --inline --quiet",
+    "build": "NODE_ENV=production webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
