--- a/package.json
+++ b/package.json
@@ -35,6 +35,12 @@
     "file-loader": "^0.8.4",
     "hjs-webpack": "^2.13.2",
     "json-loader": "^0.5.3",
+    "karma": "^0.13.10",
+    "karma-chrome-launcher": "^0.2.1",
+    "karma-mocha": "^0.2.0",
+    "karma-mocha-reporter": "^1.1.1",
+    "karma-sinon-chai": "^1.1.0",
+    "mocha": "^2.3.3",
     "postcss-loader": "^0.6.0",
     "react": "^0.13.3",
     "react-hot-loader": "^1.3.0",
