--- a/package.json
+++ b/package.json
@@ -53,7 +53,11 @@
     "yeticss": "^7.0.5"
   },
   "standard": {
-    "ignore": "pre-render/*",
+    "globals": [
+      "describe",
+      "it",
+      "expect"
+    ],
     "parser": "babel-eslint"
   },
   "dependencies": {
