--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "karma-mocha": "^0.2.0",
     "karma-mocha-reporter": "^1.1.1",
     "karma-sinon-chai": "^1.1.0",
+    "karma-sourcemap-loader": "^0.3.5",
+    "karma-webpack": "^1.7.0",
     "mocha": "^2.3.3",
     "postcss-loader": "^0.6.0",
     "react": "^0.13.3",
