--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "start": "webpack-dev-server --inline --quiet",
     "karma": "standard && karma start",
     "test": "karma start --single-run --browsers Firefox",
-    "build": "NODE_ENV=production webpack"
+    "build": "NODE_ENV=production webpack",
+    "deploy": "surge -p public -d projecter.surge.sh"
   },
   "devDependencies": {
     "autoprefixer": "^6.0.3",
@@ -50,6 +51,7 @@
     "standard": "^5.3.1",
     "style-loader": "^0.12.4",
     "stylus-loader": "^1.3.1",
+    "surge": "^0.15.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.0",
