--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "mocha": "^2.3.3",
     "postcss-loader": "^0.6.0",
     "react": "^0.14.0",
+    "react-dom": "^0.14.0",
     "react-hot-loader": "^1.3.0",
     "standard": "^5.3.1",
     "style-loader": "^0.12.4",
