--- a/package.json
+++ b/package.json
@@ -27,35 +27,35 @@
     "deploy": "surge -p public -d projecter.surge.sh"
   },
   "devDependencies": {
-    "autoprefixer": "^6.0.3",
-    "babel": "^5.8.23",
-    "babel-core": "^5.8.25",
-    "babel-eslint": "^4.1.3",
-    "babel-loader": "^5.3.2",
-    "css-loader": "^0.20.2",
-    "file-loader": "^0.8.4",
-    "hjs-webpack": "^3.1.0",
-    "json-loader": "^0.5.3",
-    "karma": "^0.13.11",
+    "autoprefixer": "^6.1.1",
+    "babel": "^6.1.18",
+    "babel-core": "^6.2.1",
+    "babel-eslint": "^5.0.0-beta3",
+    "babel-loader": "^6.2.0",
+    "css-loader": "^0.23.0",
+    "file-loader": "^0.8.5",
+    "hjs-webpack": "^5.0.1",
+    "json-loader": "^0.5.4",
+    "karma": "^0.13.15",
     "karma-chrome-launcher": "^0.2.1",
-    "karma-firefox-launcher": "^0.1.6",
-    "karma-mocha": "^0.2.0",
-    "karma-mocha-reporter": "^1.1.1",
+    "karma-firefox-launcher": "^0.1.7",
+    "karma-mocha": "^0.2.1",
+    "karma-mocha-reporter": "^1.1.3",
     "karma-sinon-chai": "^1.1.0",
     "karma-sourcemap-loader": "^0.3.6",
     "karma-webpack": "^1.7.0",
-    "mocha": "^2.3.3",
-    "postcss-loader": "^0.7.0",
-    "react": "^0.14.0",
-    "react-dom": "^0.14.0",
+    "mocha": "^2.3.4",
+    "postcss-loader": "^0.8.0",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
     "react-hot-loader": "^1.3.0",
-    "standard": "^5.3.1",
+    "standard": "^5.4.1",
     "style-loader": "^0.13.0",
-    "stylus-loader": "^1.4.0",
-    "surge": "^0.16.0",
-    "url-loader": "^0.5.6",
-    "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.1",
+    "stylus-loader": "^1.4.2",
+    "surge": "^0.17.3",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0",
     "yeticss": "^7.0.5"
   },
   "standard": {
