--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.0.3",
-    "babel": "^5.8.23",
-    "babel-core": "^5.8.25",
+    "babel-core": "^6.2.1",
     "babel-eslint": "^4.1.3",
-    "babel-loader": "^5.3.2",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
+    "babel-preset-stage-0": "^6.1.18",
     "css-loader": "^0.20.2",
     "file-loader": "^0.8.4",
     "hjs-webpack": "^3.1.0",
